--- a/.azure/MedicalRecordDemo/.env
+++ b/.azure/MedicalRecordDemo/.env
@@ -1,1 +1,18 @@
 AZURE_ENV_NAME="MedicalRecordDemo"
+AZURE_FORMRECOGNIZER_RESOURCE_GROUP="rg-MedicalRecordDemo"
+AZURE_FORMRECOGNIZER_SERVICE="cog-fr-augg7mfptpnza"
+AZURE_LOCATION="eastus"
+AZURE_OPENAI_CHATGPT_DEPLOYMENT="chat"
+AZURE_OPENAI_GPT_DEPLOYMENT="davinci"
+AZURE_OPENAI_RESOURCE_GROUP="rg-MedicalRecordDemo"
+AZURE_OPENAI_SERVICE="cog-augg7mfptpnza"
+AZURE_RESOURCE_GROUP="rg-MedicalRecordDemo"
+AZURE_SEARCH_INDEX="gptkbindex"
+AZURE_SEARCH_SERVICE="gptkb-augg7mfptpnza"
+AZURE_SEARCH_SERVICE_RESOURCE_GROUP="rg-MedicalRecordDemo"
+AZURE_STORAGE_ACCOUNT="staugg7mfptpnza"
+AZURE_STORAGE_CONTAINER="content"
+AZURE_STORAGE_RESOURCE_GROUP="rg-MedicalRecordDemo"
+AZURE_SUBSCRIPTION_ID="c55c7226-9d54-4424-9134-ce0493695085"
+AZURE_TENANT_ID="72f988bf-86f1-41af-91ab-2d7cd011db47"
+BACKEND_URI="https://app-backend-augg7mfptpnza.azurewebsites.net"
