接続情報外部化

--- a/.azure/HealthcareGPTdemo-dev/.env
+++ b/.azure/HealthcareGPTdemo-dev/.env
@@ -17,3 +17,5 @@ AZURE_STORAGE_RESOURCE_GROUP="rg-HealthcareGPTdemo-dev"
 AZURE_SUBSCRIPTION_ID="b13d394e-7f62-4504-b848-f0671fc40b42"
 AZURE_TENANT_ID="72f988bf-86f1-41af-91ab-2d7cd011db47"
 BACKEND_URI="https://app-backend-xj7iy6ezhkbzc.azurewebsites.net"
+SQL_CONNECTION_STRING="DRIVER={ODBC Driver 18 for SQL Server};SERVER=tcp:sql-server-xj7iy6ezhkbzc.database.windows.net;DATABASE=MedicalRecordDB;ENCRYPT=yes;UID=medical-record-admin;PWD={your_password}"
+
