--- a/.azure/MedicalRecordDemo/.env
+++ b/.azure/MedicalRecordDemo/.env
@@ -16,3 +16,4 @@ AZURE_STORAGE_RESOURCE_GROUP="rg-MedicalRecordDemo"
 AZURE_SUBSCRIPTION_ID="c55c7226-9d54-4424-9134-ce0493695085"
 AZURE_TENANT_ID="72f988bf-86f1-41af-91ab-2d7cd011db47"
 BACKEND_URI="https://app-backend-augg7mfptpnza.azurewebsites.net"
+SQL_CONNECTION_STRING="DRIVER={ODBC Driver 18 for SQL Server};SERVER=tcp:medical-record.database.windows.net;DATABASE=MedicalRecordDB;ENCRYPT=yes;UID=medical-record-admin;PWD={your_password}"
