text-davinci-003 retire 対応。

--- a/.azure/HealthcareGPTdemo-dev/.env
+++ b/.azure/HealthcareGPTdemo-dev/.env
@@ -3,7 +3,7 @@ AZURE_FORMRECOGNIZER_RESOURCE_GROUP="rg-HealthcareGPTdemo-dev"
 AZURE_FORMRECOGNIZER_SERVICE="cog-fr-xj7iy6ezhkbzc"
 AZURE_LOCATION="southcentralus"
 AZURE_OPENAI_CHATGPT_DEPLOYMENT="chat"
-AZURE_OPENAI_GPT_DEPLOYMENT="davinci"
+AZURE_OPENAI_GPT_DEPLOYMENT="chat"
 AZURE_OPENAI_RESOURCE_GROUP="rg-HealthcareGPTdemo-dev"
 AZURE_OPENAI_SERVICE="cog-xj7iy6ezhkbzc"
 AZURE_PRINCIPAL_ID="b13d394e-7f62-4504-b848-f0671fc40b42"
