--- a/.azure/MedicalRecordDemo/.env
+++ b/.azure/MedicalRecordDemo/.env
@@ -3,7 +3,7 @@ AZURE_FORMRECOGNIZER_RESOURCE_GROUP="rg-MedicalRecordDemo"
 AZURE_FORMRECOGNIZER_SERVICE="cog-fr-augg7mfptpnza"
 AZURE_LOCATION="eastus"
 AZURE_OPENAI_CHATGPT_DEPLOYMENT="chat"
-AZURE_OPENAI_GPT_DEPLOYMENT="davinci"
+AZURE_OPENAI_GPT_DEPLOYMENT="chat"
 AZURE_OPENAI_RESOURCE_GROUP="rg-MedicalRecordDemo"
 AZURE_OPENAI_SERVICE="cog-augg7mfptpnza"
 AZURE_RESOURCE_GROUP="rg-MedicalRecordDemo"
